# Ags-AI

./: .gitignore  AGS_AI_ASSISTANT_SUMMARY.txt  API.md  ARCHITECTURE.md  Ags-AI-User-Guide.docx  Ags-AI-User-Guide.md  CHANGELOG.md  CONFIGURATION.md  DATA_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_HF_SPACES.md  Dockerfile  LICENSE.md  README.md  app.py  check_params.py  comprehensive_averages.py  debug_ocr_parsing.py  debug_single_line.py  debug_sp_lab.py  debug_upload_parsing.py  packages.txt  pyproject.toml  requirements.txt  run_app.ps1  runtime.txt  simple_test.py  test_all_fixes.py  test_analysis_fix.py  test_consolidated_findings.py  test_economic_forecast.py  test_enhanced_parsing.py  test_error_handling.py  test_filter.py  test_full_analysis.py  test_import_fix.py  test_key_findings.py  test_leaf_sp_lab.py  test_llm_fixes.py  test_safety_fix.py  (+5 more)
.streamlit/: secrets.example.toml
docs/: CropDrive_Implementation_Guide.docx  UserGuide.md
json/: farm_3_leaf_test.json  farm_3_soil_test.json  sp_lab_test_report.json
modules/: admin.py  config_management.py  dashboard.py  history.py  results.py  upload.py
output/: leaf_table_1.csv  leaf_table_1.json  tmpchmag_ga_extracted.csv  tmps2rttv5e_extracted.csv  tmpsewsnqpj_extracted.csv  tmpvc03ey8p_extracted.csv  tmpwgmno220_extracted.csv  tmpyi0je5_k_extracted.csv
pages/: admin.py  dashboard.py  upload.py
scripts/: export_user_guide.py  package-release.ps1
soil/: soil_table_1.csv  soil_table_1.json
utils/: ai_config_utils.py  analysis_engine.py  analysis_utils.py  auth_utils.py  config_manager.py  docx_utils.py  (+10 more)
