# Python version constraint for Streamlit Cloud (uv)
# NOTE: This file is NOT used for dependency management - requirements.txt is used instead
# The [project] section is minimal and only specifies Python version constraint
[project]
requires-python = ">=3.12,<3.13"

[tool.uv]
python-preference = "managed"


